# BitBLAS

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README_v100.md  SECURITY.md  SUPPORT.md  THIRDPARTYNOTICES.txt  TRANSPARENCY.md  Transparency.md  VERSION  after_memory_rewrite.cu  best_code.cu  format.sh  install.sh  install_amd.sh  install_tvm.sh  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  tempCodeRunnerFile.python  test_dl_fused_decode_matmul.cu
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  dependabot.yml
artifact/: ._checkpoints  .gitignore  README.md  data_parse.py
artifact/Figure10/: README_FIGURE10.md  plot_figures_a6000.py  run_all.py  update_results.py
artifact/Figure11/: README.md  README_FIGURE11.md  kill_subproc.sh  llama_data.json  measure_memory.py  memory_usage.py  plot_memory_usage.py  run_all.py  test.py  update_results.py
artifact/Figure11_v100/: bloom_data.json  kill_subproc.sh  llama_data.json  measure_memory.py  nvidia_measure_memory.sh  plot_memory_usage.py  run_all.py  update_results.py
artifact/Figure12/: README.md  README_FIGURE12.md  plot_operator_performance.py  run_all.py  update_results.py
artifact/Figure12_4090/: run_all.py  update_results.py
artifact/Figure12_v100/: plot_operator_performance.py  run_all.py  update_results.py
artifact/Figure13/: README_FIGURE13.md  optimization_breakdown.py  plot_optimization_breakdown.py  run_all.py  update_results.py  update_results_end2end.py
artifact/Figure13_v100/: README.md  plot_optimization_breakdown.py  run_all.py  update_results.py
artifact/Figure14/: README.md  plot_scaling_bitwidth.py  run_all.py  scaling_bitwidth.py  update_results.py  update_results_kernel.py
artifact/Figure14_v100/: run_all.py  update_results_end2end.py  update_results_kernel.py
artifact/Figure15/: README.md  plot_figures_mi250.py  run_all.py
artifact/Figure8/: README_FIGURE8.md  plot_figures.py  plot_figures_a100.py  run_all.py  update_results.py
artifact/Figure9/: plot_figures.py  plot_figures_v100.py  run_all.py  update_results.py
artifact/QuickStart/: .gitignore  0.torch_inference_and_onnx_export.py  1.auto_gptq_inference_and_onnx_export.py  FakeQuantInt4.py  README.md  ladder_from_onnx.py  ladder_from_onnx_int4_compress.py
artifact/Table1/: README_TABLE1.md
artifact/Table1/A100/cublas-benchmark/: CMakeLists.txt  compile_and_run.sh
artifact/Table1/rocblas-benchmark/: CMakeLists.txt  Readme.md  compile_and_run.sh  tensor.h
artifact/Table2/: README_TABLE2.md  plot_nvidia_table1.py  plot_nvidia_table2.py  run_all.py  update_results.py
artifact/Table2_v100/: update_results.py
artifact/models/: export.sh  torch2onnx.py
artifact/scripts/: install_amos.sh  install_cutlass.sh  install_cutlass_ada.sh  install_faster_transformer_tvm.sh  install_nvidia_environments.sh  install_roller.sh  install_tensorir.sh  install_tensorir_amd.sh  install_tensorrt.sh  install_vllm.sh  install_welder.sh
benchmark/: README.md
benchmark/dsl/: convolution.py  matmul copy.py  matmul.py  matmul_dequantize_af.py  matmul_dequantize_fp.py  matmul_dequantize_int1.py  matmul_dequantize_int4.py  weight_propagate.py
benchmark/end2end/: run_onnxrt.py  run_trt.py  torch2onnx.py
benchmark/gridsearch/: grid_search_example.py
benchmark/operators/: base.py  benchmark_bitblas_matmul.py  benchmark_bitblas_op.py  benchmark_matmul_fast_decoding.py  benchmark_matmul_scope_compare.py  benchmark_matmul_strategies.py  benchmark_ops_matmul.py  best_code.cu  compare_benchmark.py  fp16xfp16_gemm.py  matmul.py  matmul_dequantize_af.py  matmul_dequantize_int4.py  test_add.py  test_fp16xint1.py  test_fp16xint2.py  test_gemm.py  test_gemv.py  test_int8xint1.py
benchmark/tilelang/: benchmark.sh  benchmark_tilelang_matmul.py  benchmark_tilelang_mha.py
bitblas/: __init__.py  common.py  generator.py  tvm  version.py
bitblas/base/: __init__.py  base_scheduler.py  common_schedules.py  operator_common.py  schedule_rule.py  transform.py  tuner.py  utils.py
bitblas/benchmark/: __init__.py
bitblas/builder/: __init__.py
bitblas/cache/: __init__.py  operator.py
bitblas/codegen/: base.py  tir.py
bitblas/gpu/: __init__.py  base.py  element_wise.py  fallback.py  gemv.py  gemv_dequantize.py  general_reduction.py  matmul.py  matmul_analysis.py  matmul_mfma.py  matmul_mma.py  matmul_mma_dequantize.py  matmul_wmma.py  reduction.py  rmsnorm.py  transpose.py  utils.py
bitblas/module/: __init__.py
bitblas/ops/: __init__.py  base_scheduler.py  common.py  general_matmul.py  general_matmul_splitk.py  ladder_permutate.py  matmul.py  matmul_dequantize.py  operator.py
bitblas/quantization/: __init__.py  quantization.py  utils.py
bitblas/relax/: __init__.py
bitblas/testing/: __init__.py
bitblas/tl/: __init__.py  base_hint.py  base_layout.py  lower.py  macro_generator.py  mfma_layout.py  mfma_macro_generator.py  mma_layout.py  mma_macro_generator.py  profiler.py  tuner.py  utils.py  (+1 more)
docker/: Dockerfile.cu110  Dockerfile.cu120  README.md
docs/: ExtendOperatorsWithDSL.md  Installation.md  OperatorConfig.md  PythonAPI.md  QuickStart.md
examples/: .gitignore  gemm_example.py  relax_end2end.py
experimental/: connect.py  sm80_i8_test.py  sm80_test.py  tir_cutlass.py  tir_gemm.py  tir_mma.py  tir_pad.py  tir_wmma.py
figures/: plot_figures.sh
python/: run_compiler.py
testing/: relay_test.py  test_add.py  test_gemm.py  test_gemv.py  test_mma.py  test_policy.py  test_welder_acc.py  test_welder_perf.py
testing/cpp/efficient_i4_cuda_impl/: CMakeLists.txt  efficient_i4.cu  i4matmul.hpp  param_permutate.cpp
testing/cpp/lop3_type_conversion/: CMakeLists.txt  fast_decoding.hpp  lowprecision_to_float16.cu  lowprecision_to_int4.cu  lowprecision_to_int8.cu
tools/: get_available_targets.py
tutorials/: .gitignore  1.fast_and_efficient_codegen.ipynb  2.auto_tensorization.ipynb  3.fast_decoding.ipynb  4.dynamic_shape_codegen.ipynb  5.ladder_end2end.ipynb  6.tile-language.ipynb  ladder_from_onnx.py
vicuna_tune/: database_workload.json
(+1221 files in other folders)
